manifest/objects/DMMAX__Content_Translation__c.object
<CustomObject>
    <fields>
        <fullName>DMMAX__Class__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Class</label>
        <referenceTo>DMMAX__Class__c</referenceTo>
        <relationshipLabel>Content Translations</relationshipLabel>
        <relationshipName>Content_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMMAX__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMMAX__Dirty__c</fullName>
        <formula>If(!ISBLANK(DMMAX__Insight__c), DMMAX__Insight__r.DMMAX__LocalizationVersion__c != DMMAX__Version__c,
If(!ISBLANK(DMMAX__Class__c), DMMAX__Class__r.DMMAX__LocalizationVersion__c != DMMAX__Version__c, false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dirty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMMAX__Insight__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Insight</label>
        <referenceTo>DMMAX__Insight__c</referenceTo>
        <relationshipLabel>Max Content Translations</relationshipLabel>
        <relationshipName>Content_Translations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMMAX__Language__c</fullName>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>.</fullName>
                    <label>Translation off</label>
                </value>
                <value>
                    <fullName>ar</fullName>
                    <isActive>false</isActive>
                    <label>Arabic</label>
                </value>
                <value>
                    <fullName>bg</fullName>
                    <isActive>false</isActive>
                    <label>Bulgarian</label>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                    <isActive>false</isActive>
                    <label>Chinese (Simplified)</label>
                </value>
                <value>
                    <fullName>zh_TW</fullName>
                    <isActive>false</isActive>
                    <label>Chinese (Traditional)</label>
                </value>
                <value>
                    <fullName>hr</fullName>
                    <isActive>false</isActive>
                    <label>Croatian</label>
                </value>
                <value>
                    <fullName>cs</fullName>
                    <isActive>false</isActive>
                    <label>Czech</label>
                </value>
                <value>
                    <fullName>da</fullName>
                    <isActive>false</isActive>
                    <label>Danish</label>
                </value>
                <value>
                    <fullName>nl_NL</fullName>
                    <isActive>false</isActive>
                    <label>Dutch</label>
                </value>
                <value>
                    <fullName>en_GB</fullName>
                    <isActive>false</isActive>
                    <label>English (UK)</label>
                </value>
                <value>
                    <fullName>en_US</fullName>
                    <isActive>false</isActive>
                    <label>English (US)</label>
                </value>
                <value>
                    <fullName>fi</fullName>
                    <isActive>false</isActive>
                    <label>Finnish</label>
                </value>
                <value>
                    <fullName>fr</fullName>
                    <isActive>false</isActive>
                    <label>French</label>
                </value>
                <value>
                    <fullName>de</fullName>
                    <isActive>false</isActive>
                    <label>German</label>
                </value>
                <value>
                    <fullName>el</fullName>
                    <isActive>false</isActive>
                    <label>Greek</label>
                </value>
                <value>
                    <fullName>iw</fullName>
                    <isActive>false</isActive>
                    <label>Hebrew</label>
                </value>
                <value>
                    <fullName>hu</fullName>
                    <isActive>false</isActive>
                    <label>Hungarian</label>
                </value>
                <value>
                    <fullName>in</fullName>
                    <isActive>false</isActive>
                    <label>Indonesian</label>
                </value>
                <value>
                    <fullName>it</fullName>
                    <isActive>false</isActive>
                    <label>Italian</label>
                </value>
                <value>
                    <fullName>ja</fullName>
                    <isActive>false</isActive>
                    <label>Japanese</label>
                </value>
                <value>
                    <fullName>ko</fullName>
                    <isActive>false</isActive>
                    <label>Korean</label>
                </value>
                <value>
                    <fullName>no</fullName>
                    <isActive>false</isActive>
                    <label>Norwegian</label>
                </value>
                <value>
                    <fullName>pl</fullName>
                    <isActive>false</isActive>
                    <label>Polish</label>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                    <isActive>false</isActive>
                    <label>Portuguese (Brazil)</label>
                </value>
                <value>
                    <fullName>pt_PT</fullName>
                    <isActive>false</isActive>
                    <label>Portuguese (Portugal)</label>
                </value>
                <value>
                    <fullName>ro</fullName>
                    <isActive>false</isActive>
                    <label>Romanian</label>
                </value>
                <value>
                    <fullName>ru</fullName>
                    <isActive>false</isActive>
                    <label>Russian</label>
                </value>
                <value>
                    <fullName>sk</fullName>
                    <isActive>false</isActive>
                    <label>Slovak</label>
                </value>
                <value>
                    <fullName>sl</fullName>
                    <isActive>false</isActive>
                    <label>Slovenian</label>
                </value>
                <value>
                    <fullName>es_MX</fullName>
                    <isActive>false</isActive>
                    <label>Spanish (Mexico)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMMAX__RefText1__c</fullName>
        <label>RefText1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__RefText2__c</fullName>
        <label>RefText2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__RefText3__c</fullName>
        <label>RefText3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__RefTextLong1__c</fullName>
        <label>RefTextLong1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__TargetVersion__c</fullName>
        <formula>If(!ISBLANK(DMMAX__Insight__c), DMMAX__Insight__r.DMMAX__LocalizationVersion__c,
If(!ISBLANK(DMMAX__Class__c), DMMAX__Class__r.DMMAX__LocalizationVersion__c, -999))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMMAX__Text1__c</fullName>
        <label>Text1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__Text2__c</fullName>
        <label>Text2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Text3__c</fullName>
        <label>Text3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__TextLong1__c</fullName>
        <label>TextLong1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMMAX__Type__c</fullName>
        <formula>If(!ISBLANK(DMMAX__Insight__c), &apos;Insight&apos;,
If(!ISBLANK(DMMAX__Class__c), &apos;Class&apos;, 
&apos;Unknown&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Uniqueness__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Uniqueness</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMMAX__Version__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>Version</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Max Content Translation</label>
    <nameField>
        <label>Content Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Max Content Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DMMAX__Confirm_Parent_Set</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(DMMAX__Class__c) &amp;&amp; ISBLANK(DMMAX__Insight__c)</errorConditionFormula>
        <errorMessage>Translation must be related to an object</errorMessage>
    </validationRules>
</CustomObject>